<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeResults">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/PracticeMakingChange"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/practice_making_change"
                    android:textAlignment="center"
                    android:textColor="#9C27B0"
                    android:textSize="24sp" />
            </FrameLayout>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/ChangeToMakeCaption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/change_to_make"
                                android:textSize="18sp" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/ChangeToMake"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp" />
                        </FrameLayout>
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/ChangeTotalSoFarCaption"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/change_total_so_far"
                                android:textSize="18sp" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/ChangeTotalSoFar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </FrameLayout>

                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="4">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/TimeRemainingCaption"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/time_remaining"
                                android:textSize="18sp" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/TimeRemaining"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </FrameLayout>
                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>